# compass-experiments

./: .gitignore  LICENSE  README.md  compass-registry.json  metadata.json
simple-prompt/: Dockerfile  README.md  pyproject.toml
simple-prompt/src/simple_prompt/: __init__.py  parameters.py  run.py
what-is-capital-of-france/: README.md  pyproject.toml
what-is-capital-of-france/src/what_is_capital_of_france/: parameters.py  run.py
what-is-capital-of-france/src/what_is_capital_of_france/utils/: __init__.py
