[project]
name = "simple-prompt"
version = "0.1.1"
description = "Example Compass experiment that runs a simple prompt"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.0",
    "pydantic-settings>=2.10.0",
    "inspect-ai>=0.3.0",
    "openai>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simple_prompt"]