[project]
name = "what-is-capital-of-france"
version = "0.1.0"
description = "Simple Compass experiment: What is the capital of France?"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.0",
    "pydantic-settings>=2.10.0",
    "openai>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/what_is_capital_of_france"]

